// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`centered 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: grid;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0 c1"
/>
`;

exports[`using \`TypographyContext\` useTypography = false 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: grid;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0 c1"
>
  Content
</div>
`;

exports[`using \`TypographyContext\` useTypography = true 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: grid;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
}

<div
  class="c0 c1"
>
  Content
</div>
`;

exports[`using \`align\` no target => defaults to \`items\` horizontal + vertical alignment 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: grid;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  justify-items: center;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0 c1"
/>
`;

exports[`using \`align\` no target => defaults to \`items\` single alignment 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-items: center;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0 c1"
/>
`;

exports[`using \`align\` no target => defaults to \`items\` single alignment: ignore first 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0 c1"
/>
`;

exports[`using \`align\` no target => defaults to \`items\` single alignment: ignore second 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: grid;
  justify-items: center;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0 c1"
/>
`;

exports[`using \`align\` target = \`content\` horizontal + vertical alignment 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: grid;
  -webkit-align-content: left;
  -ms-flex-line-pack: left;
  align-content: left;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0 c1"
/>
`;

exports[`using \`align\` target = \`content\` single alignment 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: grid;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0 c1"
/>
`;

exports[`using \`align\` target = \`content\` single alignment: ignore first 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: grid;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0 c1"
/>
`;

exports[`using \`align\` target = \`content\` single alignment: ignore second 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0 c1"
/>
`;

exports[`using \`align\` target = \`items\` horizontal + vertical alignment 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: grid;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  justify-items: center;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0 c1"
/>
`;

exports[`using \`align\` target = \`items\` single alignment 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-items: center;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0 c1"
/>
`;

exports[`using \`align\` target = \`items\` single alignment: ignore first 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0 c1"
/>
`;

exports[`using \`align\` target = \`items\` single alignment: ignore second 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: grid;
  justify-items: center;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0 c1"
/>
`;

exports[`with background properties 1`] = `
.c0 {
  box-sizing: border-box;
  background-color: #123456;
}

.c1 {
  display: grid;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0 c1"
/>
`;

exports[`with border properties 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 5px;
}

.c1 {
  display: grid;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0 c1"
/>
`;

exports[`with children 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: grid;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0 c1"
>
  <span>
    Hi!
  </span>
</div>
`;

exports[`with grid properties: auto 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: grid;
  grid-auto-columns: 50px;
  grid-auto-rows: 100px;
  grid-gap: 10px;
  grid-auto-flow: column;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0 c1"
/>
`;

exports[`with grid properties: templates 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: grid;
  grid-template-columns: repeat(3,3fr);
  grid-template-rows: 1fr 2fr;
  grid-gap: 10px;
  grid-auto-flow: row;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0 c1"
/>
`;

exports[`with no props 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: grid;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0 c1"
/>
`;

exports[`with padding 1`] = `
.c0 {
  box-sizing: border-box;
  padding: 10px;
}

.c1 {
  display: grid;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0 c1"
/>
`;
